--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="lib/jquery.js"></script>
     <script type="text/javascript" src="lib/underscore.js"></script>
     <script type="text/javascript" src="lib/backbone.js"></script>
+    <script type="text/javascript" src="lib/backbone.paginator.js"></script>
     <script type="text/javascript" src="lib/swiper.js"></script>
 </head>
 <body>
